# pychef

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
requirements/: dev.compiled.txt  dev.txt
src/pychef/: __init__.py
src/pychef/aws/: __init__.py
src/pychef/aws/ecs/: __init__.py  classes.py
src/pychef/aws/ecs/tests/: test_classes.py
src/pychef/aws/secrets_manager/: __init__.py  classes.py
src/pychef/aws/secrets_manager/tests/: test_classes.py
