[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pychef"
version = "0.0.0"
description = "Python utilities for iCHEF"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Dawei Tseng", email = "dawei.tseng@ichef.com.tw" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
aws = ["boto3"]

[project.urls]
Homepage = "https://github.com/iCHEF/pychef"

[tool.coverage.run]
omit = ["*/__init__.py"]
